# Distributed-computing

./: .gitignore  README.md
LabRasp1/: README.md
LabRasp1/Task1/src/sample/: Main.java  SliderThread.java
LabRasp1/Task1_b/src/sample/: Main.java  SliderThread.java
LabRasp1/Task2_a/src/com/company/: Main.java  Wood.java
LabRasp1/Task2_c/: main.go
LabRasp1/Task3_a/src/com/company/: Main.java  Semaphore.java  Wood.java
LabRasp1/Task3_b/src/com/company/: Barbershop.java  Main.java
LabRasp1/Task3_c/: main.go
LabRasp1/Task4_a/: data.txt
LabRasp1/Task4_a/src/com/company/: Main.java  ReadersAndWriters.java
LabRasp1/Task4_b/: info.txt  main.go
LabRasp1/Task4_c/: main.go
LabRasp1/Task5_a/src/com/company/: Main.java  Recruits.java
LabRasp1/Task5_b/: Barrier.go  main.go
LabRasp1/Task5_c/: main.go
LabRasp1/Task6_a/src/sample/: EventHanglerForRectangles.java  GameLife.java  Main.java  MyRectangles.java  Worker.java
LabRasp1/Task6_b/src/sample/: GameLife.java  Main.java  MyRectangles.java  Worker.java
LabRasp1/Task7_a/src/sample/: DuckWorker.java  Main.java
LabRasp1/Task7_b/src/sample/: DuckImgView.java  DuckWorker.java  Main.java
LabRasp1/Task8/: CMakeLists.txt  README.md  TMatrix.c  TMatrix.h  main  main.c  main_c
LabRasp1/Task9/: README.md
LabRasp1/Task9/GO/: main.go
LabRasp1/Task9/Lab_9_cs/: Program.cs
LabRasp1/Task9/java_lab9/src/com/company/: Main.java  Worker.java
